[GR-73222] Select exact reachability metadata at build time
Exact-mode metadata and the missing-registration reporting paths are only
built with --future-defaults=exact-reflection (or the deprecated
--exact-reachability-metadata aliases); other images keep the legacy
metadata and reject -XX:+ExactReachabilityMetadata and
-XX:ExactReachabilityMetadataPackages at startup. Warn mode and out-of-scope
callers only report and keep the legacy behavior, unnamed
ClassLoader.defineClass is checked by the parsed class name, and the report
helpers no longer return dead values.